@@ -74,6 +74,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Comparator
 import|;
 end_import
@@ -94,7 +104,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|NoSuchElementException
 import|;
 end_import
 
@@ -15571,6 +15601,170 @@ block|}
 argument_list|)
 operator|.
 name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+end_function
+
+begin_function
+DECL|method|testPointInSetQueryGetPackedPoints
+specifier|public
+name|void
+name|testPointInSetQueryGetPackedPoints
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|int
+name|numValues
+init|=
+name|randomIntValue
+argument_list|(
+literal|1
+argument_list|,
+literal|32
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|values
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|numValues
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|byte
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numValues
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|values
+operator|.
+name|add
+argument_list|(
+operator|new
+name|byte
+index|[]
+block|{
+name|i
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+name|PointInSetQuery
+name|query
+init|=
+operator|(
+name|PointInSetQuery
+operator|)
+name|BinaryPoint
+operator|.
+name|newSetQuery
+argument_list|(
+literal|"field"
+argument_list|,
+name|values
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|byte
+index|[]
+index|[]
+block|{}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Collection
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|packedPoints
+init|=
+name|query
+operator|.
+name|getPackedPoints
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|numValues
+argument_list|,
+name|packedPoints
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Iterator
+argument_list|<
+name|byte
+index|[]
+argument_list|>
+name|iterator
+init|=
+name|packedPoints
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|byte
+index|[]
+name|expectedValue
+range|:
+name|values
+control|)
+block|{
+name|assertArrayEquals
+argument_list|(
+name|expectedValue
+argument_list|,
+name|iterator
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|expectThrows
+argument_list|(
+name|NoSuchElementException
+operator|.
+name|class
+argument_list|,
+parameter_list|()
+lambda|->
+name|iterator
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|iterator
+operator|.
+name|hasNext
 argument_list|()
 argument_list|)
 expr_stmt|;
